fixed paddings on tablet for Lab

--- a/src/components/lab/LabHeadItem/styles.module.scss
+++ b/src/components/lab/LabHeadItem/styles.module.scss
@@ -13,10 +13,7 @@
   }
 
   &.active {
-    color: $blue;
-    background-color: lighten($content_bg, 6%);
-    border-radius: $radius;
-    padding: 0 $gap;
+    color: $wisegreen;
   }
 }
 
